tdf#115020: Cutting a large dataset is very slow since 6.1.0.0.alpha0+

Change-Id: Icc26224055c00bd826019bd728c3f74d2ebba535
Reviewed-on: https://gerrit.libreoffice.org/49320
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Henry Castro <hcastro@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/49517
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Tested-by: Jan Holesovsky <kendy@collabora.com>